# Weekend-Raytracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: bounding_box.h  bounding_volume_hierarchy.h  camera.h  color.h  commons.h  hittable.h  hittable_list.h  main.cpp  material.h  mesh.h  ray.h  rng.h  scene.h  sphere.h  triangle.h  vec3.h
